Ajout type custom documentation

--- a/doc/fr_FR/index.asciidoc
+++ b/doc/fr_FR/index.asciidoc
@@ -18,6 +18,8 @@ include::logHomebridge.asciidoc[]
 
 include::exemple_config_TG.asciidoc[]
 
+include::exemple_config_custom.asciidoc[]
+
 include::plugin-specifique.asciidoc[]
 
 == Changelog
