Mise à jour diverses

--- a/doc/fr_FR/exemple_config_custom.asciidoc
+++ b/doc/fr_FR/exemple_config_custom.asciidoc
@@ -32,7 +32,7 @@ image::../images/custom-3.png[]
 
 image::../images/custom-4.png[]
 
-[IMPORTANT]
+[TIP]
 *Si le champ unité a été indiqué dans jeedom, il remontra dans le type custom.*
 
 image::../images/custom-9.png[]
