--- a/doc/fr_FR/changelog.asciidoc
+++ b/doc/fr_FR/changelog.asciidoc
@@ -1,7 +1,9 @@
 === Plugin HomeBridge
 
-==== v1.3.2 (02-11-2017)
-    * Essai de génération de documentation par le market de la nuit
+==== v1.3.2 (09-11-2017)
+    * Essai de génération de documentation par le market
+    * Autre bug sur Inversion corrigé
+    * Bug Siri "Ouvre tous les volets du salon" corrigé
 
 ==== v1.3.1 (31-10-2017)
     * Bug invertBinary sur présence sans inversion
