--- a/doc/fr_FR/changelog.asciidoc
+++ b/doc/fr_FR/changelog.asciidoc
@@ -1,7 +1,7 @@
 === Plugin HomeBridge
 
-==== v1.3.2 (09-11-2017)
-    * Essai de génération de documentation par le market
+==== v1.3.2 (10-11-2017)
+    * Fichier fusionné pour la doc
     * Autre bug sur Inversion corrigé
     * Bug Siri "Ouvre tous les volets du salon" corrigé
 
