--- a/doc/fr_FR/index-temp.asciidoc
+++ b/doc/fr_FR/index-temp.asciidoc
@@ -1097,10 +1097,12 @@ image::../images/reinitialisation.png[]
 
 === Plugin HomeBridge
 
-==== v1.3.2 (09-11-2017)
-    * Essai de génération de documentation par le market
+==== v1.3.2 (09 et 10 et 12-11-2017)
+    * Fichier fusionné pour la doc
     * Autre bug sur Inversion corrigé
     * Bug Siri "Ouvre tous les volets du salon" corrigé
+    * Meilleure réparation et réinstallation
+    * Documentation corrigée
 
 ==== v1.3.1 (31-10-2017)
     * Bug invertBinary sur présence sans inversion
