Corrections divers + ajout MAJ accessoires

--- a/doc/fr_FR/index-temp.asciidoc
+++ b/doc/fr_FR/index-temp.asciidoc
@@ -162,6 +162,9 @@ image::../images/choix-acc.png[]
 
 Afin d'ajouter un accessoire à Homebridge, il suffit de cocher la case "Envoyer à Homebridge". Pour sauvegarder, il suffit de cliquer sur la petite disquette verte.
 
+[IMPORTANT]
+*Si des modifications ont été faites, comme le changement du type générique, la modification d'un paramètre, l'ajout d'un accessoire il faut impérativement redémarrer le Démon pour la prise en compte dans Homebridge*.
+
 ==== Configuration des types génériques
 
 ===== Généralités
@@ -414,7 +417,7 @@ Il existe plusieurs applications sur l'appstore compatibles HomeKit. L'applicati
 image::../images/app-domicile.jpg[]
 
 [IMPORTANT]
-*Il n'est pas possible d'inclure le pont Jeedom sur plusieurs appareils IOS. Pour utiliser Homebridge sur plusieurs appareils IOS, il suffit de partager le domicile en suivant la procédure suivante : *
+*Il n'est pas possible d'inclure le pont Jeedom sur plusieurs appareils IOS. Pour utiliser Homebridge sur plusieurs appareils IOS, il suffit de partager le domicile en suivant la procédure suivante :*
 
 image::../images/partage.png[]
 
