--- a/doc/fr_FR/changelog.asciidoc
+++ b/doc/fr_FR/changelog.asciidoc
@@ -1,5 +1,10 @@
 === Plugin HomeBridge
 
+==== v1.3.3 (13-11-2017)
+    * Modification documentation
+    * Gestion des actions Ouvrir et Fermer pour les portes de garages.
+    * DebugInfo affiche maintenant le log de création d'accessoires (si celui-ci n'est pas encore tronqué)
+
 ==== v1.3.2 (09 et 10 et 12-11-2017)
     * Fichier fusionné pour la doc
     * Autre bug sur Inversion corrigé
