--- a/doc/fr_FR/changelog.asciidoc
+++ b/doc/fr_FR/changelog.asciidoc
@@ -1,5 +1,8 @@
 === Plugin HomeBridge
 
+==== v1.3.4 (??)
+    * Gestion automatique Xiaomi PM2.5
+
 ==== v1.3.3 (13-11-2017)
     * Modification documentation
     * Gestion des actions Ouvrir et Fermer pour les portes de garages.
