--- a/doc/fr_FR/changelog.asciidoc
+++ b/doc/fr_FR/changelog.asciidoc
@@ -2,6 +2,7 @@
 
 ==== v1.3.4 (??)
     * Gestion automatique Xiaomi PM2.5
+    * Réécriture du mode de fonctionnement des thermostats, plus logique :)
 
 ==== v1.3.3 (13-11-2017)
     * Modification documentation
