--- a/doc/fr_FR/index-temp.asciidoc
+++ b/doc/fr_FR/index-temp.asciidoc
@@ -1114,6 +1114,7 @@ image::../images/reinitialisation.png[]
 
 ==== v1.3.4 (??)
     * Gestion automatique Xiaomi PM2.5
+    * Réécriture du mode de fonctionnement des thermostats, plus logique :)
 
 ==== v1.3.3 (13-11-2017)
     * Modification documentation
