[ROBOT] Action all

--- a/core/i18n/de_DE.json
+++ b/core/i18n/de_DE.json
@@ -1,40 +1,40 @@
 {
     "plugins\/mobile\/plugin_info\/info.xml": {
-        "Plugin pour l'application Mobile": "Plugin für den mobilen Einsatz",
-        "Aucune": "Ohne"
+        "Plugin pour l'application Mobile": "Plugin pour l'application Mobile",
+        "Aucune": "Aucune"
     },
     "plugins\/mobile\/desktop\/php\/mobile.php": {
-        "Ajouter un mobile": "Mobil hinzufügen",
-        "Rechercher": "Suchen nach",
-        "Mes Téléphones Mobiles": "Meine Handys",
-        "Général": "Allgemein",
-        "Nom de l'équipement mobile": "Mobil Gerätename",
-        "Nom de l'équipement template": "Name der Vorlage ",
-        "Objet parent": "Eltern-Objekt",
-        "Aucun": "Ohne",
-        "Activer": "aktivieren",
-        "Visible": "Sichtbar",
-        "Type de Mobile": "Mobiltyp",
-        "Utilisateurs": "Benutzer",
-        "Mobile": "Mobil",
+        "Ajouter un mobile": "Ajouter un mobile",
+        "Rechercher": "Rechercher",
+        "Mes Téléphones Mobiles": "Mes Téléphones Mobiles",
+        "Général": "Général",
+        "Nom de l'équipement mobile": "Nom de l'équipement mobile",
+        "Nom de l'équipement template": "Nom de l'équipement template",
+        "Objet parent": "Objet parent",
+        "Aucun": "Aucun",
+        "Activer": "Activer",
+        "Visible": "Visible",
+        "Type de Mobile": "Type de Mobile",
+        "Utilisateurs": "Utilisateurs",
+        "Mobile": "Mobile",
         "Homebridge": "Homebridge",
-        "Informations": "Information",
-        "Homebridge est un logiciel tiers permettant d'interconnecter Homekit avec différents systèmes domotiques.": "Homebridge ist eine Homekit Software von einem Drittanbieter, um verschiedenen Home-Automation-Systeme miteinander zu verbinden.",
-        "Dépendances": "Abhängigkeiten",
-        "Nom": "Name",
-        "Statut": "Status",
+        "Informations": "Informations",
+        "Homebridge est un logiciel tiers permettant d'interconnecter Homekit avec différents systèmes domotiques.": "Homebridge est un logiciel tiers permettant d'interconnecter Homekit avec différents systèmes domotiques.",
+        "Dépendances": "Dépendances",
+        "Nom": "Nom",
+        "Statut": "Statut",
         "Installation": "Installation",
-        "Dernière installation": "Letzte Installation",
-        "Démon": "Daemon",
-        "Configuration": "Konfiguration",
-        "(Re)Démarrer": "(Neu)Start",
-        "Arrêter": "Beenden",
-        "Gestion automatique": "Automatische Verwaltung",
-        "Dernier lancement": "Letzter Start",
-        "Commande": "Befehl",
+        "Dernière installation": "Dernière installation",
+        "Démon": "Démon",
+        "Configuration": "Configuration",
+        "(Re)Démarrer": "(Re)Démarrer",
+        "Arrêter": "Arrêter",
+        "Gestion automatique": "Gestion automatique",
+        "Dernier lancement": "Dernier lancement",
+        "Commande": "Commande",
         "Option": "Option",
-        "Action": "Aktion",
-        "Supprimer": "Löschen",
-        "Sauvegarder": "Speichern"
+        "Action": "Action",
+        "Supprimer": "Supprimer",
+        "Sauvegarder": "Sauvegarder"
     }
 }
