--- a/core/i18n/en_US.json
+++ b/core/i18n/en_US.json
@@ -1,40 +1,40 @@
 {
     "plugins\/mobile\/plugin_info\/info.xml": {
-        "Plugin pour l'application Mobile": "Plugin for mobile application",
-        "Aucune": "None"
+        "Plugin pour l'application Mobile": "Plugin pour l'application Mobile",
+        "Aucune": "Aucune"
     },
     "plugins\/mobile\/desktop\/php\/mobile.php": {
-        "Ajouter un mobile": "Add mobile",
-        "Rechercher": "Search",
-        "Mes Téléphones Mobiles": "My mobile phones",
-        "Général": "Main",
-        "Nom de l'équipement mobile": "Name of mobile equipment",
-        "Nom de l'équipement template": "Template device name",
-        "Objet parent": "Parent object",
-        "Aucun": "None",
-        "Activer": "Activate",
+        "Ajouter un mobile": "Ajouter un mobile",
+        "Rechercher": "Rechercher",
+        "Mes Téléphones Mobiles": "Mes Téléphones Mobiles",
+        "Général": "Général",
+        "Nom de l'équipement mobile": "Nom de l'équipement mobile",
+        "Nom de l'équipement template": "Nom de l'équipement template",
+        "Objet parent": "Objet parent",
+        "Aucun": "Aucun",
+        "Activer": "Activer",
         "Visible": "Visible",
-        "Type de Mobile": "Type of Mobile",
-        "Utilisateurs": "Users: ",
+        "Type de Mobile": "Type de Mobile",
+        "Utilisateurs": "Utilisateurs",
         "Mobile": "Mobile",
         "Homebridge": "Homebridge",
-        "Informations": "Information",
-        "Homebridge est un logiciel tiers permettant d'interconnecter Homekit avec différents systèmes domotiques.": "Homebridge is a third party software for interconnecting Homekit with different home automation systems.",
-        "Dépendances": "Dependencies",
-        "Nom": "Name",
-        "Statut": "Status",
-        "Installation": "Setup",
-        "Dernière installation": "Last setup",
-        "Démon": "Daemon",
-        "Configuration": "Setup",
-        "(Re)Démarrer": "(Re)Start",
-        "Arrêter": "Stop",
-        "Gestion automatique": "Automatic management",
-        "Dernier lancement": "Last run",
-        "Commande": "Command",
+        "Informations": "Informations",
+        "Homebridge est un logiciel tiers permettant d'interconnecter Homekit avec différents systèmes domotiques.": "Homebridge est un logiciel tiers permettant d'interconnecter Homekit avec différents systèmes domotiques.",
+        "Dépendances": "Dépendances",
+        "Nom": "Nom",
+        "Statut": "Statut",
+        "Installation": "Installation",
+        "Dernière installation": "Dernière installation",
+        "Démon": "Démon",
+        "Configuration": "Configuration",
+        "(Re)Démarrer": "(Re)Démarrer",
+        "Arrêter": "Arrêter",
+        "Gestion automatique": "Gestion automatique",
+        "Dernier lancement": "Dernier lancement",
+        "Commande": "Commande",
         "Option": "Option",
         "Action": "Action",
-        "Supprimer": "Delete",
-        "Sauvegarder": "Save"
+        "Supprimer": "Supprimer",
+        "Sauvegarder": "Sauvegarder"
     }
 }
