--- a/core/i18n/es_ES.json
+++ b/core/i18n/es_ES.json
@@ -1,40 +1,40 @@
 {
     "plugins\/mobile\/plugin_info\/info.xml": {
-        "Plugin pour l'application Mobile": "Plugin para la app móvil",
-        "Aucune": "Ninguna"
+        "Plugin pour l'application Mobile": "Plugin pour l'application Mobile",
+        "Aucune": "Aucune"
     },
     "plugins\/mobile\/desktop\/php\/mobile.php": {
-        "Ajouter un mobile": "Añadir un móvil",
-        "Rechercher": "Buscar",
-        "Mes Téléphones Mobiles": "Mis móviles",
-        "Général": "Principal",
-        "Nom de l'équipement mobile": "Nombre del dispositivo móvil",
-        "Nom de l'équipement template": "Nombre del dispositivo plantilla",
-        "Objet parent": "Objeto padre",
-        "Aucun": "Ningún",
-        "Activer": "Activar",
+        "Ajouter un mobile": "Ajouter un mobile",
+        "Rechercher": "Rechercher",
+        "Mes Téléphones Mobiles": "Mes Téléphones Mobiles",
+        "Général": "Général",
+        "Nom de l'équipement mobile": "Nom de l'équipement mobile",
+        "Nom de l'équipement template": "Nom de l'équipement template",
+        "Objet parent": "Objet parent",
+        "Aucun": "Aucun",
+        "Activer": "Activer",
         "Visible": "Visible",
-        "Type de Mobile": "Tipo de móvil",
-        "Utilisateurs": "Usuarios",
-        "Mobile": "Móvil",
+        "Type de Mobile": "Type de Mobile",
+        "Utilisateurs": "Utilisateurs",
+        "Mobile": "Mobile",
         "Homebridge": "Homebridge",
-        "Informations": "Informaciones",
-        "Homebridge est un logiciel tiers permettant d'interconnecter Homekit avec différents systèmes domotiques.": "Homebridge es un software de terceros para interconectar el Homekit con varios sistemas de automatización del hogar.",
-        "Dépendances": "Dependencias:",
-        "Nom": "Nombre",
-        "Statut": "Estado",
-        "Installation": "Instalación",
-        "Dernière installation": "Última instalación",
-        "Démon": "Demonio",
-        "Configuration": "Configuración ",
-        "(Re)Démarrer": "(Re)Iniciar",
-        "Arrêter": "Parar",
-        "Gestion automatique": "Gestión automática",
-        "Dernier lancement": "Última ejecución",
-        "Commande": "Comando",
-        "Option": "Opción",
-        "Action": "Acción",
-        "Supprimer": "Borrar",
-        "Sauvegarder": "Guardar"
+        "Informations": "Informations",
+        "Homebridge est un logiciel tiers permettant d'interconnecter Homekit avec différents systèmes domotiques.": "Homebridge est un logiciel tiers permettant d'interconnecter Homekit avec différents systèmes domotiques.",
+        "Dépendances": "Dépendances",
+        "Nom": "Nom",
+        "Statut": "Statut",
+        "Installation": "Installation",
+        "Dernière installation": "Dernière installation",
+        "Démon": "Démon",
+        "Configuration": "Configuration",
+        "(Re)Démarrer": "(Re)Démarrer",
+        "Arrêter": "Arrêter",
+        "Gestion automatique": "Gestion automatique",
+        "Dernier lancement": "Dernier lancement",
+        "Commande": "Commande",
+        "Option": "Option",
+        "Action": "Action",
+        "Supprimer": "Supprimer",
+        "Sauvegarder": "Sauvegarder"
     }
 }
