--- a/core/i18n/id_ID.json
+++ b/core/i18n/id_ID.json
@@ -1,40 +1,40 @@
 {
     "plugins\/mobile\/plugin_info\/info.xml": {
         "Plugin pour l'application Mobile": "Plugin pour l'application Mobile",
-        "Aucune": "Tak ada"
+        "Aucune": "Aucune"
     },
     "plugins\/mobile\/desktop\/php\/mobile.php": {
         "Ajouter un mobile": "Ajouter un mobile",
-        "Rechercher": "Mencari",
+        "Rechercher": "Rechercher",
         "Mes Téléphones Mobiles": "Mes Téléphones Mobiles",
-        "Général": "Umum",
+        "Général": "Général",
         "Nom de l'équipement mobile": "Nom de l'équipement mobile",
-        "Nom de l'équipement template": "Nama peralatan contoh",
-        "Objet parent": "Objek induk",
-        "Aucun": "Tak ada",
-        "Activer": "Mengaktifkan",
-        "Visible": "Terlihat",
+        "Nom de l'équipement template": "Nom de l'équipement template",
+        "Objet parent": "Objet parent",
+        "Aucun": "Aucun",
+        "Activer": "Activer",
+        "Visible": "Visible",
         "Type de Mobile": "Type de Mobile",
-        "Utilisateurs": "Pengguna",
+        "Utilisateurs": "Utilisateurs",
         "Mobile": "Mobile",
         "Homebridge": "Homebridge",
-        "Informations": "Informasi",
+        "Informations": "Informations",
         "Homebridge est un logiciel tiers permettant d'interconnecter Homekit avec différents systèmes domotiques.": "Homebridge est un logiciel tiers permettant d'interconnecter Homekit avec différents systèmes domotiques.",
         "Dépendances": "Dépendances",
-        "Nom": "Nama",
-        "Statut": "Status",
+        "Nom": "Nom",
+        "Statut": "Statut",
         "Installation": "Installation",
         "Dernière installation": "Dernière installation",
         "Démon": "Démon",
-        "Configuration": "Konfigurasi",
+        "Configuration": "Configuration",
         "(Re)Démarrer": "(Re)Démarrer",
-        "Arrêter": "Berhenti",
-        "Gestion automatique": "Otomatis manajemen",
+        "Arrêter": "Arrêter",
+        "Gestion automatique": "Gestion automatique",
         "Dernier lancement": "Dernier lancement",
-        "Commande": "Pesanan",
-        "Option": "Pilihan",
-        "Action": "Tindakan",
-        "Supprimer": "Menghapus",
-        "Sauvegarder": "Menyimpan"
+        "Commande": "Commande",
+        "Option": "Option",
+        "Action": "Action",
+        "Supprimer": "Supprimer",
+        "Sauvegarder": "Sauvegarder"
     }
 }
