--- a/core/i18n/ru_RU.json
+++ b/core/i18n/ru_RU.json
@@ -1,40 +1,40 @@
 {
     "plugins\/mobile\/plugin_info\/info.xml": {
         "Plugin pour l'application Mobile": "Plugin pour l'application Mobile",
-        "Aucune": "Нет"
+        "Aucune": "Aucune"
     },
     "plugins\/mobile\/desktop\/php\/mobile.php": {
         "Ajouter un mobile": "Ajouter un mobile",
-        "Rechercher": "Искать",
+        "Rechercher": "Rechercher",
         "Mes Téléphones Mobiles": "Mes Téléphones Mobiles",
-        "Général": "Главная",
+        "Général": "Général",
         "Nom de l'équipement mobile": "Nom de l'équipement mobile",
-        "Nom de l'équipement template": "Название шаблона оборудования",
-        "Objet parent": "Родительский объект",
-        "Aucun": "Нет",
-        "Activer": "Активировать",
-        "Visible": "Видимый",
+        "Nom de l'équipement template": "Nom de l'équipement template",
+        "Objet parent": "Objet parent",
+        "Aucun": "Aucun",
+        "Activer": "Activer",
+        "Visible": "Visible",
         "Type de Mobile": "Type de Mobile",
-        "Utilisateurs": "Пользователи",
-        "Mobile": "Мобильный",
+        "Utilisateurs": "Utilisateurs",
+        "Mobile": "Mobile",
         "Homebridge": "Homebridge",
-        "Informations": "Информация",
+        "Informations": "Informations",
         "Homebridge est un logiciel tiers permettant d'interconnecter Homekit avec différents systèmes domotiques.": "Homebridge est un logiciel tiers permettant d'interconnecter Homekit avec différents systèmes domotiques.",
         "Dépendances": "Dépendances",
-        "Nom": "Имя",
-        "Statut": "Статус",
-        "Installation": "Установка",
+        "Nom": "Nom",
+        "Statut": "Statut",
+        "Installation": "Installation",
         "Dernière installation": "Dernière installation",
-        "Démon": "Демон",
-        "Configuration": "Конфигурация",
+        "Démon": "Démon",
+        "Configuration": "Configuration",
         "(Re)Démarrer": "(Re)Démarrer",
-        "Arrêter": "Стоп",
+        "Arrêter": "Arrêter",
         "Gestion automatique": "Gestion automatique",
-        "Dernier lancement": "Последний запуск",
-        "Commande": "Команда",
-        "Option": "Опция",
-        "Action": "Действие",
-        "Supprimer": "Удалить",
-        "Sauvegarder": "Сохранить"
+        "Dernier lancement": "Dernier lancement",
+        "Commande": "Commande",
+        "Option": "Option",
+        "Action": "Action",
+        "Supprimer": "Supprimer",
+        "Sauvegarder": "Sauvegarder"
     }
 }
