--- a/core/i18n/it_IT.json
+++ b/core/i18n/it_IT.json
@@ -1,40 +1,40 @@
 {
     "plugins\/mobile\/plugin_info\/info.xml": {
         "Plugin pour l'application Mobile": "Plugin pour l'application Mobile",
-        "Aucune": "Nessuno"
+        "Aucune": "Aucune"
     },
     "plugins\/mobile\/desktop\/php\/mobile.php": {
         "Ajouter un mobile": "Ajouter un mobile",
-        "Rechercher": "Cerca",
+        "Rechercher": "Rechercher",
         "Mes Téléphones Mobiles": "Mes Téléphones Mobiles",
-        "Général": "Principale",
+        "Général": "Général",
         "Nom de l'équipement mobile": "Nom de l'équipement mobile",
         "Nom de l'équipement template": "Nom de l'équipement template",
-        "Objet parent": "Oggetto padre",
-        "Aucun": "Nessuno",
-        "Activer": "Attivare",
-        "Visible": "Visibile",
+        "Objet parent": "Objet parent",
+        "Aucun": "Aucun",
+        "Activer": "Activer",
+        "Visible": "Visible",
         "Type de Mobile": "Type de Mobile",
-        "Utilisateurs": "Nome utente",
+        "Utilisateurs": "Utilisateurs",
         "Mobile": "Mobile",
         "Homebridge": "Homebridge",
-        "Informations": "Informazioni",
+        "Informations": "Informations",
         "Homebridge est un logiciel tiers permettant d'interconnecter Homekit avec différents systèmes domotiques.": "Homebridge est un logiciel tiers permettant d'interconnecter Homekit avec différents systèmes domotiques.",
-        "Dépendances": "Dipendenze",
-        "Nom": "Nome",
-        "Statut": "Stato",
-        "Installation": "Installazione",
-        "Dernière installation": "Ultima installazione",
-        "Démon": "Demone",
-        "Configuration": "Configurazione",
-        "(Re)Démarrer": "(Re)Start",
-        "Arrêter": "Ferma",
-        "Gestion automatique": "Gestione automatica",
-        "Dernier lancement": "Ultima esecuzione",
-        "Commande": "Comando",
-        "Option": "Opzione",
-        "Action": "Azione",
-        "Supprimer": "Elimina",
-        "Sauvegarder": "Salva"
+        "Dépendances": "Dépendances",
+        "Nom": "Nom",
+        "Statut": "Statut",
+        "Installation": "Installation",
+        "Dernière installation": "Dernière installation",
+        "Démon": "Démon",
+        "Configuration": "Configuration",
+        "(Re)Démarrer": "(Re)Démarrer",
+        "Arrêter": "Arrêter",
+        "Gestion automatique": "Gestion automatique",
+        "Dernier lancement": "Dernier lancement",
+        "Commande": "Commande",
+        "Option": "Option",
+        "Action": "Action",
+        "Supprimer": "Supprimer",
+        "Sauvegarder": "Sauvegarder"
     }
 }
