--- a/doc/de_DE/configurationHomebridge.asciidoc
+++ b/doc/de_DE/configurationHomebridge.asciidoc
@@ -1,28 +1,68 @@
-=== Sélection des accessoires 
+== Configuration du plugin Homebridge
 
-Vous devez sélectionner les équipements que vous souhaitez utiliser avec Homebridge.
+=== Création du pont Homebridge
 
-*Configuration via les plugins*
+Pour créer le pont Homebridge, il faut aller dans la rubrique "Gestion", et cliquer sur "Configuration".
 
-image::../images/config-plugin.png[]
+image::../images/gestion.png[]
 
-*Configuration via les pièces / objets*
+Pour créer le pont, il suffit de lui donner un nom et un code "PIN".
+
+image::../images/config-pluginhb.png[]
+
+* *Utilisateur* : Permet à Homebridge d'utiliser l'ApiKey d'un utilisateur d'une box Jeedom.
+
+* *Nom Homebridge* : Permet de nommer le pont Homebridge. 
+
+[IMPORTANT]
+Le changement de nom Homebridge obligera à reconfigurer les applications HomeKit.
+
+* *PIN Homebridge* : Permet de personnaliser le code PIN Homebridge.
+
+[IMPORTANT]
+Les PIN suivants ne sont pas acceptés par Apple : 000-00-000, 111-11-111, 222-22-222 -> 999-99-999, 123-45-678, 876-54-321. Son changement obligera la reconfiguration des applications HomeKit.
+
+* *Réparer* :  Permet une réparation de Homebridge en modifiant les identifiants. 
+
+[IMPORTANT]
+Il faut retirer le bridge de l'application "Maison".
+
+* *Réparer & réinstaller* : Supprime et réinstalle complètement Homebridge. 
+
+[IMPORTANT]
+A n'effectuer que sur conseil d'un membre du forum et il faut retirer le pont de l'application "Maison".
+
+* *Plateforme Homebridge supplémentaire* : Permet de rajouter manuellement un équipement.
+
+[IMPORTANT]
+Réservé à un public averti. Il n'y aura aucun support pour cette partie (permet par exemple d'ajouter des cameras à Homebridge).
+
+Une fois les cases *Utilisateur, nom Homebridge et PIN Homebridge* correctement renseignées, la configuration se finalise en cliquant sur **Sauvegarder**. Le démon redémarre.
+
+=== Ajout des accessoires dans Homebridge
+
+Les équipements seront à ajouter manuellement. 
 
 image::../images/config-piece.png[]
 
-Cliquez sur les plugins ou les pièces/objets où se trouvent les équipements que vous souhaitez ajouter.
+Afin d'intégrer un accessoire dans Homebridge, il faut sélectionner la pièce où il se trouve.
 
-image::../images/config-plugin-1.png[]
+image::../images/choix-acc.png[]
 
-Pour sélectionner les équipements que vous voulez utiliser sur Homebridge, cochez la case "Envoyer à Homebridge".
-[TIP]
-Pour ajouter ou supprimer un accessoire dans Homebrige, sélectionnez l'accessoire en question dans Plugins ou Objet/pièces et cochez ou décochez "Envoyer à Homebridge". Cliquez sur sauvegarder. Une fois sauvegardé (et le démon relancé), votre accessoire sera intégré ou supprimé de Homebridge.
+Afin d'ajouter un accessoire à Homebridge, il suffit de cocher la case "Envoyer à Homebridge". Pour sauvegarder, il suffit de cliquer sur la petite disquette verte.
 
-En cliquant sur l'équipement, vous verrez les types génériques utilisés pour la communication entre votre jeedom et Homebridge.
+[IMPORTANT]
+*Si des modifications ont été faites, comme le changement du type générique, la modification d'un paramètre, l'ajout d'un accessoire il faut impérativement redémarrer le Démon pour la prise en compte dans Homebridge.*
+
+==== Configuration des types génériques
+
+===== Généralités
+
+En cliquant sur l'équipement, les types génériques utilisés pour la communication entre votre Jeedom et Homebridge apparaissent.
 
 image::../images/typegen-1.png[]
 
-La majorité des types génériques est déjà renseignée. Dans certains cas, vous devrez les configurer manuellement (pour le plugin Virtuel par exemple).
+La majorité des types génériques est déjà renseignée. Dans certains cas, une configuration manuelle sera nécessaire (pour le plugin Virtuel par exemple).
 
 Voici les types génériques disponibles : 
 
@@ -34,77 +74,79 @@ Pour les actions :
 
 image::../images/ypegeaction.png[]
 
-[IMPORTANT]
-Chaque équipement doit disposer d'au moins un type générique de type "Etat". S'il n'y a pas d'Etat, l'équipement ne sera pas disponible sur Homebridge.
-Il faut une certaine cohérence dans le choix des types génériques. Dans le cas d'une lumière par exemple, vous devez avoir l'info "Lumière état" et les actions "Lumières bouton OFF" et "Lumière bouton ON". Si cette cohérence n'est pas respectée, l'équipement peut ne pas apparaître dans Homebridge.
-
-image::../images/ypegelumi.png[]
-
-=== Types génériques compatibles avec Homebridge
-
 include::configurationHomebridgeTypeGenerique.asciidoc[]
 
-===  Konfiguration des Mobil-Plugins
+*Des exemples de configurations sont disponibles à la fin de la documentation*
 
-Une fois tous les objets configurés avec leurs bons types génériques, retournez dans *-> Equipement -> Configuration.*
+Pour valider, il faut aller dans la configuration du plugin et relancer le démon Homebridge en cliquant sur "(Re)Démarrer".
 
-image::../images/config-pluginhb.png[]
+image::../images/demon-homebridge.png[]
 
-* *Utilisateur* : Permet à Homebridge d'utiliser l'ApiKey d'un utilisateur de votre Jeedom.
+==== Ajout de Jeedom dans HomeKit
 
-* *Nom Homebridge* : Permet de renommer votre pont Homebridge. 
+Il existe plusieurs applications sur l'appstore compatibles HomeKit. L'application "Maison" d'Apple sera utilisée pour la rédaction de la documentation.
 
-[IMPORTANT]
-Le changement de nom Homebridge vous obligera à reconfigurer vos applications Homekit.
-
-* *PIN Homebridge* : Permet de personnaliser le code PIN Homebridge.
+image::../images/app-domicile.jpg[]
 
 [IMPORTANT]
-Les PIN suivants ne sont pas accéptés par Apple : 000-00-000, 111-11-111, 222-22-222 -> 999-99-999, 123-45-678, 876-54-321. Son changement vous obligera à reconfigurer vos applications Homekit
+*Il n'est pas possible d'inclure le pont Jeedom sur plusieurs appareils IOS. Pour utiliser Homebridge sur plusieurs appareils IOS, il suffit de partager le domicile en suivant la procédure suivante :*
 
-* *Réparer* :  Permet une réparation de Homebridge en modifiant les identifiants. 
+image::../images/partage.png[]
 
-[IMPORTANT]
-Il faut retirer le bridge de votre application "Maison" avant et l'y remettre ensuite.
-
-* *Réparer & réinstaller* : Supprime et réinstalle complètement Homebridge. 
-
-[IMPORTANT]
-A n'effectuer que sur conseil d'un membre du forum et il faut retirer le bridge de votre application "Maison" avant et l'y remettre ensuite.
-
-* *Plateforme Homebridge supplémentaire* : Permet de rajouter manuellement un équipement.
-
-[IMPORTANT]
-Réservé à un public averti. Il n'y aura aucun support pour cette partie. (permet par exemple d'ajouter des cameras à Homebridge)
-
-Une fois les cases *Utilisateur, nom Homebridge et PIN Homebridge* correctement renseignées, finaliser la configuration en cliquant sur **sauvegarder**.
-
-=== Ajout de jeedom dans homekit
-
-Il existe plusieurs applications sur l'appstore compatible homekit. Nous allons utiliser l'application "domicile".
-
-Pour inclure jeedom, ouvrir l'application "Maison" et cliquez sur ajouter un accessoire.
+L'inclusion de Jeedom dans HomeKit, se fait en ouvrant l'application "Maison" et en cliquant sur "Ajouter un accessoire".
 
 image::../images/home-1.jpg[]
 
-Scannez le code PIN 
+[TIP]
+Dans l'exemple, le domicile s'appelle "Test". Son nom peut être modifié en allant dans les réglages de l'application.
+
+Il faut scanner le code PIN 
 
 image::../images/home-2.jpg[]
 
-Sélectionnez votre jeedom
+[TIP]
+*Le code PIN peut être également rentré manuellement en cliquant sur "Code absent ou impossible à scanner ?".*
+
+Il faut sélectionner le pont à inclure.
 
 image::../images/home-3.jpg[]
 
-[IMPORTANT]
-L'exemple a été réalisée avec la version beta d'IOS 11. Sur IOS 10 la procécure est quasi identique. Il suffit de sélectionner votre jeedom et de scanner le PIN.
-
-image::../images/home-4.jpg[]
 
 [IMPORTANT]
-Comme expliqué plus haut dans la doc, Homebridge n'est pas reconnu officiellement par Apple. Un message vous indique que l'accessoire n'est pas cetifié.  Cliquez sur "poursuivre l'ajout".
+Comme expliqué plus haut dans la doc, Homebridge n'est pas reconnu officiellement par Apple. Un message indique que l'accessoire n'est pas certifié, il faut valider l'inclusion en cliquant sur "Poursuivre l'ajout".
+
+image::../images/home-4.png[]
+
+*Le pont Jeedom est maintenant intégré à HomeKit.*
+
+==== Rangement des accessoires dans HomeKit
+
+Les accessoires doivent être rangés correctement dans HomeKit. Il faudra créer des pièces pour y intégrer les accessoires.
+
+[IMPORTANT]
+*Les pièces dans Jeedom ne sont pas importées dans Homebridge. Ceci n'est pas dû à Jeedom mais à la gestion des pièces par Apple.*
+
+Le premier accessoire à "ranger" est le pont Jeedom. 
 
 image::../images/home-5.jpg[]
 
-Il suffit maintenant de placer correctement les accessoires dans les bonnes pièces. Vous avez la possibilité de le créer en cliquant sur pièce et créer pièce.
+Il faut sélectionner la pièce où sera installé le pont. Si elle n'existe pas, il faudra la créer en cliquant sur "Créer".
 
-Vous pouvez retrouver https://support.apple.com/fr-fr/HT204893[ici] la documentation complète de l'application "Maison" d'Apple.
+image::../images/home-05.jpg[]
+
+Définir le nom de la nouvelle pièce. Il est également possible de lui attribuer un fond d'écran dédié. Pour finaliser la création de la pièce, il faut cliquer sur "Enregistrer".
+
+image::../images/home-051.jpg[]
+
+Maintenant, il ne reste plus qu'à ranger tous les accessoires dans les différentes pièces.
+
+image::../images/home-052.jpg[]
+
+[TIP]
+*La fonction "Inclure dans les favoris" permet d'afficher l'accessoire dans la page principale de l'application*
+
+image::../images/home-053.jpg[]
+
+*Les accessoires doivent être "rangés" un par un. Si il y en a beaucoup, cette partie prendra du temps*.
+
+La documentation complète de l'application "Maison" d'Apple est disponible https://support.apple.com/fr-fr/HT204893[ici].
